@@ -1,3 +1,5 @@
+2013-04-09: Add .desktop file and mime info for data files.
+
 2013-04-09: Add toggle to invert y-axis on latency measurements.
 
 2013-04-04: Add Q-Q plot type.
